--- a/HedgeModManager/Languages/zh-CN.xaml
+++ b/HedgeModManager/Languages/zh-CN.xaml
@@ -78,10 +78,10 @@
   
     <!-- Diff UI Strings -->
     <system:String x:Key="DiffUITitle"    >更新日志</system:String>
-    <system:String x:Key="DiffUIAdded"    >新增: {0}</system:String>
-    <system:String x:Key="DiffUIRemoved"  >修改: {0}</system:String>
-    <system:String x:Key="DiffUIRenamed"  >移除: {0}</system:String>
-    <system:String x:Key="DiffUIModified" >重命名: {0}</system:String>
+    <system:String x:Key="DiffUIAdded"    >新增</system:String>
+    <system:String x:Key="DiffUIRemoved"  >修改</system:String>
+    <system:String x:Key="DiffUIRenamed"  >移除</system:String>
+    <system:String x:Key="DiffUIModified" >重命名</system:String>
 
     <!-- Settings UI Strings -->
     <!--   Game & Mod Loader -->
